Updated the code for sorting in whole array

--- a/javafx/PaginationDemo/nbproject/private/private.properties
+++ b/javafx/PaginationDemo/nbproject/private/private.properties
@@ -6,7 +6,7 @@ do.jar=true
 endorsed.javafx.ant.classpath=.
 javac.debug=true
 javadoc.preview=true
-javafx.run.as=embedded
+javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=D:\\Users\\NGM\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
