--- a/javafx/PaginationDemo/nbproject/project.properties
+++ b/javafx/PaginationDemo/nbproject/project.properties
@@ -35,10 +35,7 @@ jar.archive.disabled=true
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${javafx.runtime}/lib/jfxrt.jar:\
-    ${javafx.runtime}/lib/deploy.jar:\
-    ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,12 +59,18 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+javafx.application.implementation.version=1.0
 javafx.binarycss=false
+javafx.classpath.extension=\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=false
@@ -88,8 +91,7 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
-javafx.runtime=${platforms.Default_JavaFX_Platform.javafx.runtime.home}
-javafx.sdk=${platforms.Default_JavaFX_Platform.javafx.sdk.home}
+javafx.signing.blob=false
 javafx.signing.enabled=true
 javafx.signing.type=self
 jnlp.codebase.type=no.codebase
@@ -104,10 +106,15 @@ jnlp.signing.alias=
 jnlp.signing.keystore=
 # Main class for Java launcher
 main.class=com.javafx.main.Main
+# For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
+manifest.custom.codebase=*
+# Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Default_JavaFX_Platform
+native.bundling.enabled=false
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}
 run.test.classpath=\
